Fixed whitespace appearing in Chrome

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,6 +18,10 @@ a {
     text-decoration: none;
 }
 
+html, body {
+    overflow-x:hidden;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     color: $textColor;
